# opaqueprompts-chat-server

./: .gitignore  README.md
.github/workflows/: build-docker.yaml  changes.yaml  main.yaml  publish-docker.yaml  tests.yaml
docker/: Dockerfile  README.md
langchain-integrations/: desanitize_chain.py  sanitize_chain.py
langchain-integrations/demos/: sequential_chain_demo.py
python-package/: README.md  pyproject.toml  requirements.txt  setup.py
python-package/src/langchain_integrations/: prompt_guard_callbacks.py  prompt_guard_chain.py  prompt_guard_funcs.py  prompt_guard_llm_wrapper.py
python-package/src/langchain_integrations/demos/: callback_demo.py  langchain_expression_demo.py  prompt_guard_chain_demo.py  prompt_guard_llm_demo.py
python-package/src/opchatserver/: authorization.py  intermediate_outputs.py  models.py  prompt_template.py  server.py
python-package/src/pgchatserver/: authorization.py  echo_llm.py  intermediate_outputs.py  memory.py  models.py  prompt_guard_funcs.py  prompt_guard_llm_wrapper.py  prompt_template.py  server.py
python-package/src/pgdemoserver/: authorization.py  server.py
python-package/tests/unit/: test_authorization.py
